fix out of bounds elements

--- a/style.css
+++ b/style.css
@@ -23,10 +23,9 @@ body{
     color:white;
     font-size: xx-large;
     padding: 8px;
-    font-weight: bolder;
- 
-   
+    font-weight: bolder;  
 }
+
 
 /* border around gamloft */
 
@@ -45,17 +44,14 @@ body{
 #banner{
     width: 100%;
     height: auto;
-    z-index: auto;
+    
 }
 
 
 
 .welcomeBanner{
-    display: flex;
-    flex-flow: row;
-    align-items: center;
-    justify-content:center; 
-    background-color: #f63232;  
+    background-color: #f63232; 
+    text-align: center; 
 }
 
 #welcome{
@@ -90,6 +86,8 @@ a:active{
     text-decoration: none;
 }
 
+
+
 .releaseText{
       
     padding: 20px;
@@ -118,14 +116,25 @@ article p {
 
   }
 
+
+/* release posters */
+
+.releasePosters{
+    margin-bottom: 50px;
+}
+
+
 .releasePosters{
   text-align: center;
 }
 
 
 ul li img{
-    width: 200px;
+    width: 270px;
 }
+
+
+/* contact section */
 
 section{
     background-color: rgb(238, 238, 238);
@@ -163,6 +172,7 @@ section form button {
 
 }
 
+/* footer */
 
 footer{
     padding: 20px; 
@@ -187,27 +197,29 @@ footer h3{
         margin: 0px;
         padding: 0px;
     }
+
+    .websiteTitle{
+        position:sticky;
+        z-index: auto;
+        top: 0px;
+    }
+
+    #banner{
+        z-index: auto;
+    }
  
 
    .welcomeBanner{
-    display: flex;
-    flex-flow: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content:center; 
-    background-color: #f63232;
-    width: 200px;  
+    width: 350px;  
     height: 200px;
-    position:relative;
-    z-index: 1;
+    position:absolute;
+    left: 0px;
+    top: 45%;
+    z-index: auto;
     
 }
 
-#welcome{
-    font-size: x-large;
-}
-
-#gameloft{
+.welcomeBanner .textTitle span{
     font-size: xx-large;
 }
 
@@ -219,20 +231,50 @@ footer h3{
     padding: 20px;
     background-color:#f4f4f4;
     position: sticky;
+    top:13%;
 
 }
+
+.pageNav span a{
+    font-size: larger;
+}
+
+.releasePosters{
+    margin: 70px 40px 90px 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+
 
 
  }
  
 
-
- /* intermediate Large devices (laptops/desktops, 700px and up) */
  
- 
- @media only screen and (min-width: 700px) {
+ @media only screen and (min-width: 800px) {
     
+    #banner{
+        width: 100%;
+        height: 50%;
+        
+    }
   
+    .welcomeBanner{
+        width: 300px;  
+        height: 170px;
+        position:absolute;
+        left: 0px;
+        top: 30%;
+        z-index: auto;
+        
+    }
+
+    .pageNav{
+        top:10%;
+    
+    }
  }
  
 
